--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 JWT_SECRET = 'topsecret'
+
+EMAIL_USER=contacto@colegioandeschile.cl
+EMAIL_PASS=colegio3131
+
+SMTP_HOST=mail.colegioandeschile.cl
+SMTP_PORT=465
