--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 JWT_SECRET = 'topsecret'
 
 EMAIL_USER=contacto@colegioandeschile.cl
-EMAIL_PASS=colegio3131
+EMAIL_PASS=86stx3TZ5V5PS8A
 
 SMTP_HOST=mail.colegioandeschile.cl
 SMTP_PORT=465
